--- a/Views/Classes/Details.cshtml
+++ b/Views/Classes/Details.cshtml
@@ -19,6 +19,23 @@
             <dt class="w-1/3 font-medium text-gray-700">Класен ръководител:</dt>
             <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.Teacher.FullName)</dd>
         </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Ученици:</dt>
+            <dd class="w-2/3 text-gray-900">
+                <ul class="space-y-2">
+                    @foreach (var student in Model.Students)
+                    {
+                        <li class="flex items-center">
+                            <span class="flex-1 truncate">@student.FullName</span>
+                            <a asp-controller = "Students" asp-action="Details" asp-route-id="@student.Id"
+                               class="ml-4 inline-block bg-blue-500 hover:bg-blue-600 text-white py-1 px-3 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400">
+                                ⓘ 
+                            </a>
+                        </li>
+                    }
+                </ul>
+            </dd>
+        </div>
     </dl>
 
     <div class="mt-6 flex justify-between">
