--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using SchoolAdministrationSystem.Models
 @using SchoolAdministrationSystem.DTOs
 @using SchoolAdministrationSystem.Data.Entities
+@using SchoolAdministrationSystem.Utils
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
