--- a/Views/Absences/Delete.cshtml
+++ b/Views/Absences/Delete.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Премахване на отсъствие";
 }
 
-<h1 class="text-2xl font-semibold mb-6">Премахване на отсъствие</h1>
+<h1 class="text-2xl font-semibold mb-6">Премахване на заявление</h1>
 
-<h3 class="text-lg font-medium text-red-600 mb-4">Сигурни ли сте, че желаете да премахнете отсъствието?</h3>
+<h3 class="text-lg font-medium text-red-600 mb-4">Сигурни ли сте, че желаете да премахнете заявлението?</h3>
 
 <div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md">
-    <h4 class="text-lg font-semibold mb-4">Информация за отсъствието</h4>
+    <h4 class="text-lg font-semibold mb-4">Информация за заявление</h4>
     <hr class="mb-6" />
 
     <dl class="space-y-4">
