--- a/Views/Absences/Details.cshtml
+++ b/Views/Absences/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model AbsenceDTO
 
 @{
-    ViewData["Title"] = "Информация за отсъствие";
+    ViewData["Title"] = "Информация за заявление";
 }
 
 <h1 class="text-3xl font-bold text-gray-900 mb-6">Информация</h1>
 
 <div class="max-w-3xl mx-auto bg-white p-6 rounded-lg shadow-lg">
-    <h4 class="text-lg font-medium text-gray-700 mb-4">Информация за отсъствието</h4>
+    <h4 class="text-lg font-medium text-gray-700 mb-4">Информация за заявлението</h4>
     <hr class="my-4" />
 
     <dl class="space-y-6">
