--- a/Views/Absences/Edit.cshtml
+++ b/Views/Absences/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model AbsenceDTO
 @{
-    ViewData["Title"] = "Редактиране на отсъствие";
+    ViewData["Title"] = "Редактиране на заявление";
 }
 
 <h1 class="text-2xl font-semibold mb-6">Редактиране</h1>
 
 <div class="max-w-3xl mx-auto bg-white p-6 rounded-lg shadow-md">
-    <h4 class="text-lg font-semibold mb-4">Информация за отсъствието</h4>
+    <h4 class="text-lg font-semibold mb-4">Информация за заявлението</h4>
     <hr class="mb-6" />
 
     <form asp-action="Edit" class="space-y-6">
