--- a/Views/Absences/ListByStudent.cshtml
+++ b/Views/Absences/ListByStudent.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Отсъствия";
 }
 
-<h1 class="text-2xl font-semibold mb-6">Отсъствия на @Model.FirstOrDefault().Student.FullName (справка)</h1>
+<h1 class="text-2xl font-semibold mb-6">Заявления на @Model.FirstOrDefault().Student.FullName (справка)</h1>
 
 <div class="overflow-x-auto">
     <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow-md">
