--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 </a>
 
                 <ul class="space-y-6">
-                    <li><a asp-controller="Home" asp-action="Privacy" class="text-gray-600 hover:text-blue-600">За нас</a></li>
+                    <li><a asp-controller="Home" asp-action="Privacy" class="text-gray-600 hover:text-blue-600">За системата</a></li>
                     <li><a asp-controller="Absences" asp-action="Index" class="text-gray-600 hover:text-blue-600">Отсъствия</a></li>
                     <li><a asp-controller="Classes" asp-action="Index" class="text-gray-600 hover:text-blue-600">Класове</a></li>
                     <li><a asp-controller="Students" asp-action="Index" class="text-gray-600 hover:text-blue-600">Ученици</a></li>
