--- a/Views/Absences/ListByClass.cshtml
+++ b/Views/Absences/ListByClass.cshtml
@@ -9,7 +9,7 @@
     ViewData["Title"] = "Отсъствия";
 }
 
-<h1 class="text-2xl font-semibold mb-6">Отсъствия на @Model.FirstOrDefault().Class.Speciality (справка)</h1>
+<h1 class="text-2xl font-semibold mb-6">Заявления на @Model.FirstOrDefault().Class.Speciality клас (справка)</h1>
 
 <div class="overflow-x-auto">
     <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow-md">
@@ -60,15 +60,15 @@
                     </td>
                     <td class="px-6 py-4 text-sm text-gray-600">
                         <div class="flex space-x-2">
-                            <a asp-action="Edit" asp-route-id="@item.Id" class="bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
+                            <a asp-action="Edit" asp-route-id="@item.Id" class="w-28 text-center bg-yellow-500 hover:bg-yellow-600 text-white px-3 py-2 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
                                 ✎ Редактирай
                             </a>
 
-                            <a asp-action="Details" asp-route-id="@item.Id" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400">
+                            <a asp-action="Details" asp-route-id="@item.Id" class="w-28 text-center bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400">
                                 ⓘ Информация
                             </a>
 
-                            <a asp-action="Delete" asp-route-id="@item.Id" class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-red-400">
+                            <a asp-action="Delete" asp-route-id="@item.Id" class="w-28 text-center bg-red-500 hover:bg-red-600 text-white px-3 py-2 rounded-md focus:outline-none focus:ring-2 focus:ring-red-400">
                                 ✗ Премахни
                             </a>
                         </div>
