--- a/Views/Absences/ListByClassPeriod.cshtml
+++ b/Views/Absences/ListByClassPeriod.cshtml
@@ -9,7 +9,7 @@
     ViewData["Title"] = "Отсъствия";
 }
 
-<h1 class="text-2xl font-semibold mb-6">Отсъствия на @Model.FirstOrDefault().Class.Speciality клас за период: @ViewData["Start"] - @ViewData["End"] (справка)</h1>
+<h1 class="text-2xl font-semibold mb-6">Заявления на @Model.FirstOrDefault().Class.Speciality клас за период: @ViewData["Start"] - @ViewData["End"] (справка)</h1>
 
 <div class="overflow-x-auto">
     <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow-md">
