--- a/Views/AddData/Index.cshtml
+++ b/Views/AddData/Index.cshtml
@@ -9,7 +9,7 @@
     <h4 class="text-lg font-semibold mb-4">Качете CSV файл</h4>
     <hr class="mb-6" />
 
-    <form asp-action="ImportCSV" method="post" enctype="multipart/form-data" class="space-y-6">
+    <form asp-action="ImportStudentsCSV" method="post" enctype="multipart/form-data" class="space-y-6">
         <div asp-validation-summary="ModelOnly" class="text-red-600 font-bold mb-4"></div>
 
         <div class="form-group">
