--- a/Views/Teachers/Details.cshtml
+++ b/Views/Teachers/Details.cshtml
@@ -23,6 +23,10 @@
             <dt class="w-1/3 font-medium text-gray-700">Фамилия:</dt>
             <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.LastName)</dd>
         </div>
+        <div class="flex items-center">
+            <dt class="w-1/3 font-medium text-gray-700">Е-поща:</dt>
+            <dd class="w-2/3 text-gray-900">@Html.DisplayFor(model => model.Email)</dd>
+        </div>
     </dl>
 
     <div class="mt-6 flex justify-between">
