--- a/Views/Teachers/Edit.cshtml
+++ b/Views/Teachers/Edit.cshtml
@@ -31,6 +31,12 @@
             <span asp-validation-for="LastName" class="text-red-600 font-bold"></span>
         </div>
 
+        <div class="form-group">
+            <label asp-for="Email" class="block font-medium text-gray-700">Е-поща</label>
+            <input asp-for="Email" class="form-control block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500" />
+            <span asp-validation-for="Email" class="text-red-600 font-bold"></span>
+        </div>
+
         <input type="hidden" asp-for="Id" />
 
         <div class="form-group flex justify-between">
