--- a/Views/Classes/Create.cshtml
+++ b/Views/Classes/Create.cshtml
@@ -6,15 +6,12 @@
 
 <h1 class="text-2xl font-semibold mb-6">Създай клас</h1>
 
-<h4 class="text-lg mb-4">Информация за клас</h4>
-<hr class="mb-6" />
-
 <div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md">
     <h4 class="text-lg font-semibold mb-4">Информация за клас</h4>
     <hr class="mb-6" />
 
     <form asp-action="Create" class="space-y-6">
-        <div asp-validation-summary="ModelOnly" class="text-red-600 font-bold mb-4"></div>
+        <div asp-validation-summary="All" class="text-red-600 font-bold mb-4"></div>
 
         <div class="form-group">
             <label asp-for="Speciality" class="block font-medium text-gray-700 mb-1">Клас</label>
