fix teacher login and data view, fix home page design, teacher can add absences only to their own class

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Влез";
 }
 
-<h1 class="text-2xl font-semibold mb-6">@ViewData["Title"]</h1>
+<h1 class="text-2xl font-semibold mb-6">Влез</h1>
 
 <div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md">
     <h4 class="text-lg font-semibold mb-4">Влезте в профила си</h4>
