--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -103,9 +103,18 @@
     </div>
 
     <footer class="border-t mt-8 py-4 text-center text-gray-600">
-        <div class="container mx-auto">
-            &copy; 2024 - Всички права запазени СУУА - <a href="/Home/Privacy" class="text-blue-600 hover:underline">За нас</a>
-        </div>
+        @if (!User.Identity.IsAuthenticated)
+        {
+            <div class="container mx-auto">
+                &copy; 2025 - Всички права запазени СУУА<a></a>
+            </div>
+        }
+        else
+        {
+            <div class="container mx-auto">
+                &copy; 2025 - Всички права запазени СУУА - <a href="/Home/Privacy" class="text-blue-600 hover:underline">За системата</a>
+            </div>
+        }
     </footer>
 
     <!-- Scripts -->
