--- a/Views/Classes/Index.cshtml
+++ b/Views/Classes/Index.cshtml
@@ -12,6 +12,14 @@
     </a>
 </p>
 
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="text-green-600 font-bold mb-4">
+        @TempData["SuccessMessage"]
+    </div>
+}
+
+
 <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow-md">
     <thead>
         <tr class="bg-gray-100">
